2022-03-14  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/poked.c (poked_init): Define `poked_libpoke_version`
	Poke variable.

2022-03-14  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/poked.c (struct poked_options): New struct to keep options.
	(poked_options): Global variable to keep options.
	(poked_options_init): Parse program arguments and fill
	`poked_options`.
	(poked_help): Show help.
	(main): Print socket path in the beginning; be verbose only in
	debug mode.
	(tif_puts): Print on stdout only in debug mode.
	(tif_printf): Likewise.
	(poked_init): Print debugging-related info only in debug mode.

2022-03-14  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-pk): Convey the IO space size through
	poke-ios-open.

2022-03-14  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-repl-default-prompt): Define.
	(poke-repl-prompt): Make var.
	(poke-pk): Define poke_el_ios_set and install it in the ios_set
	hook.
	(poke-ios-close): Restore default prompt when there are no more
	open IO spaces.
	(poke-ios-set): Define.
	(poke-repl-set-prompt): Define.
	(poke-vu-erase): Define.

2022-03-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-rt.pk (ios_set_hook): New hook.
	(_pkl_run_ios_set_hook): New function.
	* libpoke/pkl-gen-builtins.pks (builtin_open): Call the ios_set
	hook whenever appropriate.
	(builtin_set_ios): Likewise.
	* testsuite/poke.pkl/ios-hook-set-1.pk: New test.
	* testsuite/poke.pkl/ios-hook-set-2.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
	* doc/poke.texi (IO Space Hooks): Document ios_set_hook.

2022-03-14  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-ios-set-ios): Define.
	(poke-ios-mode-map): Likewise.

2022-03-14  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (tabulated-list): Require tabulated-list.
	(poke-ios-mode): Define.
	(poke-ios-populate): Likewise.
	(poke-ios): Likewise.

2022-03-14  Jose E. Marchesi  <jemarch@gnu.org>
